# ece_592_genai

./: .env.example  .gitignore  README.md  pyproject.toml
.chroma_langchain_baseline/: chroma.sqlite3
.chroma_langchain_policy/: chroma.sqlite3
rag_langchain_baseline/: __init__.py  _env.py  chains.py  config.py  llm.py  loaders.py  pipeline.py  prompts.py  retriever.py  splitting.py  vectorstore.py
rag_langchain_policy/: __init__.py  _env.py  chains.py  config.py  llm.py  loaders.py  pipeline.py  policy_filters.py  prompts.py  retriever.py  splitting.py  vectorstore.py
scripts/: build_index.py  chat.py  query.py
scripts_policy_layer/: build_index.py  chat.py  query.py  test_index.py
synthetic_data_legal/: USCA_AG_Bulletin_2020.txt  USCA_BenefitsFraud_Statute_2016.txt  USCA_BenefitsFraud_Statute_2021.txt  USCA_FinancialFraud_Statute_2017.txt  USCA_FinancialFraud_Statute_2023.txt  USCA_IdentityTheft_Statute_2018.txt  USCA_IdentityTheft_Statute_2024.txt  USCA_PublicHandbook_2024.txt  USFED_BenefitsFraud_Statute_2016.txt  USFED_BenefitsFraud_Statute_2022.txt  USFED_DOJ_Guidance_2020.txt  USFED_FinancialFraud_Statute_2018.txt  USFED_FinancialFraud_Statute_2024.txt  USFED_IdentityTheft_Statute_2019.txt  USFED_IdentityTheft_Statute_2025.txt  USFED_PublicFAQ_2025.txt  metadata_manifest.csv
